// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`customWorkOperatorEmail, locale > adds a Romanian-brief note, nothing else, when the locale is ro (snapshot) 1`] = `
"A custom work lead

The brief mentions "customers log into", which points to software we do not build self-serve. The brief is written in Romanian, quoted below exactly as they sent it.

They can book the call themselves at the link we sent them. Until then, or until you reach out, this sits in the Custom work lane.

  Un portal in care clientii mei se autentifica

Name: Sarah Smith
Email: sarah@example.com
Their site: https://acme.example.com

Open this lead: https://flowstarter.net/admin/dashboard/pipeline#custom-work-lead-lead-1

--

Flowstarter
hello@flowstarter.net
This is a service message about your project, not marketing, so there is nothing to unsubscribe from. Reply to this email and a person will read it."
`;

exports[`customWorkOperatorEmail, locale > renders in English with no locale note by default (snapshot) 1`] = `
"A custom work lead

The brief mentions "customers log into", which points to software we do not build self-serve.

They can book the call themselves at the link we sent them. Until then, or until you reach out, this sits in the Custom work lane.

  A portal my customers log into to track their orders

Name: Sarah Smith
Email: sarah@example.com
Their site: https://acme.example.com

Open this lead: https://flowstarter.net/admin/dashboard/pipeline#custom-work-lead-lead-1

--

Flowstarter
hello@flowstarter.net
This is a service message about your project, not marketing, so there is nothing to unsubscribe from. Reply to this email and a person will read it."
`;
